<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/create_recipe_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vc_recipe_collapsing_app_bar_layout_height"
        android:background="?colorPrimary">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/create_recipe_collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/CollapsingToolbarLayoutAppearance"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="@dimen/vc_recipe_collapsing_toolbar_layout_expanded_title_margin_start"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutAppearance"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/create_recipe_image_view_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/create_recipe_image_view_image_content_description"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_camera_alt_72dp"
                android:transitionName="test"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/create_recipe_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStart="@dimen/vc_recipe_toolbar_content_inset_start"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_left_alt_24dp" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        android:padding="@dimen/small_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/create_recipe_edit_text_title"
                style="@style/ThemeOverlay.Heading2EditText"
                android:layout_alignParentStart="true"
                android:hint="@string/create_recipe_edit_text_title_hint" />

            <RelativeLayout
                android:id="@+id/create_recipe_linear_layout_time_and_servings_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_recipe_edit_text_title"
                android:layout_marginBottom="@dimen/standard_margin"
                android:layout_marginTop="@dimen/micro_margin">

                <EditText
                    android:id="@+id/create_recipe_edit_text_time"
                    style="@style/ThemeOverlay.TimeAndServingsEditText"
                    android:layout_alignParentStart="true"
                    android:drawableStart="@drawable/ic_timer_24dp"
                    android:hint="@string/create_recipe_edit_text_time_hint" />

                <EditText
                    android:id="@+id/create_recipe_edit_text_servings"
                    style="@style/ThemeOverlay.TimeAndServingsEditText"
                    android:layout_toEndOf="@id/create_recipe_edit_text_time"
                    android:digits="0123456789-"
                    android:drawableStart="@drawable/ic_account_24dp"
                    android:hint="@string/create_recipe_edit_text_servings_hint" />

                <Switch
                    android:id="@+id/create_recipe_switch_publish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/create_recipe_switch_publish_margin_top"
                    android:text="@string/create_recipe_switch_publish_text"
                    android:textColor="@color/text_secondary_color"
                    android:textSize="@dimen/standard_text_size" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/create_recipe_linear_layout_ingredients_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_recipe_linear_layout_time_and_servings_container"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/create_recipe_text_view_ingredients_title"
                        style="@style/ThemeOverlay.Heading2Text"
                        android:text="@string/vc_recipe_ingredients_title" />

                    <Button
                        android:id="@+id/create_recipe_button_edit_ingredients"
                        style="@style/ThemeOverlay.EditButton"
                        android:layout_width="@dimen/create_recipe_button_edit_ingredients_width"
                        android:layout_height="@dimen/create_recipe_button_edit_ingredients_height" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/create_recipe_linear_layout_ingredients_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:orientation="vertical" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/create_recipe_linear_layout_steps_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_recipe_linear_layout_ingredients_container"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/create_recipe_text_view_steps_title"
                        style="@style/ThemeOverlay.Heading2Text"
                        android:text="@string/vc_recipe_activity_steps_title" />

                    <Button
                        android:id="@+id/create_recipe_button_edit_steps"
                        style="@style/ThemeOverlay.EditButton"
                        android:layout_width="@dimen/create_recipe_button_edit_ingredients_width"
                        android:layout_height="@dimen/create_recipe_button_edit_ingredients_height" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/create_recipe_linear_layout_steps_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vc_recipe_margin_to_avoid_fab_collision"
                    android:orientation="vertical" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/create_recipe_floating_action_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/standard_margin"
        android:src="@drawable/ic_complete_alt_24dp" />

</android.support.design.widget.CoordinatorLayout>